[package]
name = "tonic-graceful-shutdown"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = "0.5"

[dependencies]
bytes        = "1.0"
listenfd     = "0.3"
prost        = "0.8"
tonic        = { version = "0.5", features = ["transport"] }
tokio        = { version = "1.12", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
